# detect_mechanical_parts

./: CMakeLists.txt  README.md  list_package_venv.txt  package.xml  requirements_venv.txt
data/: cloud_obj.pcd
data/views/: grasp_pose.txt  obj_30.ply  obj_31.ply  obj_32.ply  obj_33.ply  obj_34.ply  obj_35.ply  obj_36.ply  obj_37.ply  obj_38.ply  obj_39.ply  obj_40.ply
launch/: controller_icosaf.launch  detect_mechanical_parts_icosaf.launch
msg/: AckMsg.msg  BoxesMsg.msg  DetectionArrayMsg.msg  DetectionMsg.msg  DetectionMsgNoHeader.msg  Detection_old.msg  DisplacementMsg.msg  ImageReadyMsg.msg  SubscribeToStreamMsg.msg
msg/hmi/: ComponenteErrorMsg.msg  CoordinateMsg.msg  PrelievoComponenteMsg.msg  RichiestaCoordinateMsg.msg  RichiestaCoordinateStatusMsg.msg
src/: a_controller.py  a_nn_detection_visualizer.py  a_objs_detector_node.py  a_pose_estimator_node.py  a_qrcode_detector.py  a_server.py  detector.py  detector_node.py  global_registration.py  main_registration.py  scriptToConvertRotMatrixToRotVector.py  utils.py  utils_rob.py  visualizer.py
yolo_model/: color_match.txt  yolov4_objs_gray.cfg
